# MirrorAir

./: README.md  app.js  build.gradle.kts  guide.html  index.html  manifest.json  mirror-to-mac.json  settings.gradle.kts  styles.css  vercel.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: receiver.properties
app/src/main/cpp/: CMakeLists.txt  openairplay_bridge.cpp  rpiplay_port_sources.cmake
app/src/main/java/com/mirrornode/app/: AirPlayDiscoveryManager.kt  AndroidVideoDecoder.kt  MainActivity.kt  ReceiverConfig.kt  ReceiverMode.kt  ReceiverNativeBridge.kt  ReceiverService.kt  ReceiverState.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: app.js  guide.html  index.html  styles.css
docs/downloads/: README.txt
downloads/: README.txt
scripts/: install-debug-apk.sh  mirror-android-to-mac.sh  prepare-downloads.sh
